--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 
 <div class = "jumbotron text-center" >
-    <h1>Welcome to the game</h1>
-    <P>These are the current favorite games</P>
+    <h1>Welcome to the database</h1>
+    <P>These are the current bugs</P>
     {{#each entries}}
     <div class = 'entries'>
         <p class = "font-weight-bold">Game:{{title}}</p>
