--- a/views/entries.handlebars
+++ b/views/entries.handlebars
@@ -1,4 +1,4 @@
 <div class = "jumbotron text-center" >
-    <h1>Enter Games Here</h1>
-    <P>You will enter games here</P>
+    <h1>Enter Bugs Here</h1>
+    <P>You will enter bugs here</P>
 </div>
