--- a/views/entries2.html
+++ b/views/entries2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id= "wrapper">
-            <h1>Here is the List</h1>
+            <h1>Here is the List of Bugs</h1>
             <div id="entries-list">
 
             </div>
@@ -21,7 +21,11 @@
             entries.entries.forEach(function(entry){
                 //document.getElementById('entries-list').innerHTML += "<br>" + entry.title;
             
-                document.getElementById('entries-list').innerHTML += "<div class ='entries'><p>Game: "+ entry.title+"</p><p>Genre: "+entry.genre+"</p><p>Date: "+entry.date+"</p></div><br>"
+                document.getElementById('entries-list').innerHTML 
+                += "<div class ='entries'><p>Game: "
+                + entry.title+"</p><p>Genre: "
+                +entry.genre+"</p><p>Date: "
+                +entry.date+"</p></div><br>"
             
             });
         });
