--- a/views/gameEntries/addgame.handlebars
+++ b/views/gameEntries/addgame.handlebars
@@ -2,16 +2,16 @@
     <div class="col-md-6 mx-auto">
         <div class="card card-body">
             <form class="form-group" action="/addgame" method="POST">
-                <h3>Enter Your Game Here:</h3>
-                <label>Title of Game</label>
+                <h3>Enter Your Bug Here:</h3>
+                <label>Bug Name</label>
                 <br>
                 <input type="text" name="title" required>
                 <br>
-                <label>Genre of Game</label>
+                <label>Type of Bug</label>
                 <br>
-                <textarea name = "genre" class = "form-control"required></textarea>
+                <textarea name = "type" class = "form-control"required></textarea>
                 <br>
-                <button type="submit" class = "btn btn-primary">Submit Game</button>
+                <button type="submit" class = "btn btn-primary">Submit Bug</button>
             </form>
         </div>
     </div>
