--- a/views/gameEntries/editgame.handlebars
+++ b/views/gameEntries/editgame.handlebars
@@ -2,17 +2,17 @@
     <div class="col-md-6 mx-auto">
         <div class="card card-body">
             <form class="form-group" action="/editgame/{{entry.id}}?_method=PUT" method="POST">
-                <h3>Enter Your Game Here:</h3>
-                <label>Edit Title of Game</label>
+                <h3>Edit Your Bug Here:</h3>
+                <label>Edit Name of Bug</label>
                 <input type="hidden" name="_method" value="PUT">
                 <br>
                 <input type="text" name="title" value="{{entry.title}}"required>
                 <br>
-                <label>Genre of Game</label>
+                <label>Type of Bug</label>
                 <br>
                 <textarea name = "genre" class = "form-control"required>{{entry.genre}}</textarea>
                 <br>
-                <button type="submit" class = "btn btn-primary">Submit Game</button>
+                <button type="submit" class = "btn btn-primary">Submit Edited Bug</button>
             </form>
         </div>
     </div>
