--- a/views/index2.html
+++ b/views/index2.html
@@ -3,21 +3,21 @@
     <head>
             <meta charset="utf-8" />
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Game List App Page</title>
+            <title>Bug List App Page</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link href="form.css" rel="stylesheet" typer="text/css">
     </head>
 
     <body>
         <form action="/" method="POST">
-            <h3>Enter Your Game Here:</h3> 
-            <lable>Title of Game</lable>
+            <h3>Enter Your Bug Here:</h3> 
+            <lable>Name of Bug</lable>
             <input type ="text" name ="title" required>
             <br>
-            <lable>Genre of Game</lable>
+            <lable>Type of Bug</lable>
             <input type="text" name="genre" required>
             <br>
-            <button type="submit">Submit Game</button>
+            <button type="submit">Submit Bug</button>
         </form>
     </body>
 </html>
