--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">GameListApp</a>
+  <a class="navbar-brand" href="#">DTS Bug App</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,9 +12,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/entries">Entries</a>
-      </li>
-            <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
       </li>
 
 
