--- a/views/gameEntries/addgame.handlebars
+++ b/views/gameEntries/addgame.handlebars
@@ -9,7 +9,27 @@
                 <br>
                 <label>Type of Bug</label>
                 <br>
-                <textarea name = "type" class = "form-control"required></textarea>
+                <input name = "type" class = "form-control"required></input>
+                <br>
+                <label>Location</label>
+                <br>
+                <input name = "loc" class = "form-control"required></input>
+                <br>
+                <label>Priority</label>
+                <br>
+                <input name = "priority" class = "form-control"required></input>
+                <br>
+                <label>Description of Bug</label>
+                <br>
+                <textarea name = "description" class = "form-control"required></textarea>
+                <br>
+                <label>Found by</label>
+                <br>
+                <input name = "found" class = "form-control"required></textarea>
+                <br>
+                <label>Progress of Bug</label>
+                <br>
+                <input name = "progress" class = "form-control"required></textarea>
                 <br>
                 <button type="submit" class = "btn btn-primary">Submit Bug</button>
             </form>
