--- a/views/index2.html
+++ b/views/index2.html
@@ -15,7 +15,7 @@
             <input type ="text" name ="title" required>
             <br>
             <lable>Type of Bug</lable>
-            <input type="text" name="genre" required>
+            <input type="text" name="type" required>
             <br>
             <button type="submit">Submit Bug</button>
         </form>
