--- a/views/entries.html
+++ b/views/entries.html
@@ -22,9 +22,14 @@
                 //document.getElementById('entries-list').innerHTML += "<br>" + entry.title;
             
                 document.getElementById('entries-list').innerHTML 
-                += "<div class ='entries'><p>Game: "
-                    + entry.title+"</p><p>Genre: "
-                    +entry.genre+"</p><p>Date: "
+                += "<div class ='entries'><p>Bug: "
+                    +entry.title+"</p><p>Type: "
+                    +entry.type+"</p><p>Location: "
+                    +entry.loc+"</p><p>>Priorty:"
+                    +entry.priority+"</p><p>Description: "
+                    +entry.description+"</p><p>Found by: "
+                    +entry.found+"</p><p>Progress:"
+                    +entry.progress+"</p><p>Date:"
                     +entry.date+"</p></div><br>"
             
             });
