--- a/views/gameEntries/editgame.handlebars
+++ b/views/gameEntries/editgame.handlebars
@@ -10,7 +10,27 @@
                 <br>
                 <label>Type of Bug</label>
                 <br>
-                <textarea name = "genre" class = "form-control"required>{{entry.genre}}</textarea>
+                <textarea name = "type" class = "form-control"required>{{entry.type}}</textarea>
+                <br>
+                <label>Location</label>
+                <br>
+                <input name = "loc" class = "form-control"required>{{entry.loc}}</input>
+                <br>
+                <label>Priority</label>
+                <br>
+                <input name = "priority" class = "form-control"required>{{entry.priority}}</input>
+                <br>
+                <label>Description of Bug</label>
+                <br>
+                <textarea name = "description" class = "form-control"required>{{entry.description}}</textarea>
+                <br>
+                <label>Found by</label>
+                <br>
+                <input name = "found" class = "form-control"required>{{entry.found}}</textarea>
+                <br>
+                <label>Progress of Bug</label>
+                <br>
+                <input name = "progress" class = "form-control"required>{{entry.progress}}</textarea>
                 <br>
                 <button type="submit" class = "btn btn-primary">Submit Edited Bug</button>
             </form>
